# bgslibrary

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  demo2.py  pixi.toml  pyproject.toml  setup.py
.github/workflows/: cmake_autobuild_ubuntu_ocv3416.yml  cmake_autobuild_ubuntu_ocv347.yml  cmake_autobuild_ubuntu_ocv460.yml  cmake_manualbuild_ubuntu_ocv3416.yml  cmake_manualbuild_ubuntu_ocv347.yml  cmake_manualbuild_ubuntu_ocv460.yml  pixi_golden_matrix.yml
bgslibrary/algorithms/LBSP/: BackgroundSubtractorLBSP.h  BackgroundSubtractorLBSP_.h
tests/golden/: README.md  golden_cpp.py  golden_test.py  run_algorithm.py
tests/golden/cpp/: CMakeLists.txt  golden_cpp.cpp
tests/golden/goldens/: linux-64-opencv3.4.16.json  linux-64-opencv3.4.7.json  linux-64-opencv4.13-cpp.json  linux-64-opencv4.13.json  linux-64-opencv4.6.0.json  linux-aarch64-opencv4.13-cpp.json  linux-aarch64-opencv4.13.json  osx-arm64-opencv4.13-cpp.json  osx-arm64-opencv4.13.json  win-64-opencv4.13.json
