# PEP 517/518 build configuration for the pybgs Python wrapper.
#
# numpy is required at BUILD time: the CMake build detects the NumPy include dir
# via `python -c "import numpy; print(numpy.get_include())"`. Under pip's build
# isolation the build runs in an isolated environment that only contains the
# packages listed below, so without numpy here the build fails with
# `ModuleNotFoundError: No module named 'numpy'` (and the build aborts).
[build-system]
requires = ["setuptools>=61", "wheel", "numpy"]
build-backend = "setuptools.build_meta"
